Dummy_Package_for_scratch_org/main/default/objects/Settings__c/fields/CAD_Licenses__c.field-meta.xml
<CustomField>
    <fullName>CAD_Licenses__c</fullName>
    <label>CAD Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>