Dummy_Package_for_scratch_org/main/default/objects/Settings__c/fields/copado_functions_webhook_client_key__c.field-meta.xml
<CustomField>
    <fullName>copado_functions_webhook_client_key__c</fullName>
    <label>copado functions webhook client key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>