Dummy_Package_for_scratch_org/main/default/objects/Settings__c/fields/Copado_Site__c.field-meta.xml
<CustomField>
    <fullName>Copado_Site__c</fullName>
    <defaultValue>&quot;http://copado.sandbox.cs17.force.com&quot;</defaultValue>
    <label>Copado_Site</label>
    <type>Url</type>
</CustomField>