Dummy_Package_for_scratch_org/main/default/objects/Settings__c/fields/CryptoKEY__c.field-meta.xml
<CustomField>
    <fullName>CryptoKEY__c</fullName>
    <description>Crypto key to use in DeployAPI class.</description>
    <label>CryptoKEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>