Dummy_Package_for_scratch_org/main/default/objects/Settings__c/fields/CST_Licenses__c.field-meta.xml
<CustomField>
    <fullName>CST_Licenses__c</fullName>
    <label>CST Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>