Dummy_Package_for_scratch_org/main/default/objects/Settings__c/fields/Current_Copado_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_Copado_Version__c</fullName>
    <inlineHelpText>Current Copado Deployer version that is installed in the Org. This field needs to be maintained in every single Copado version manually.</inlineHelpText>
    <label>Current Copado Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>