Dummy_Package_for_scratch_org/main/default/objects/Settings__c/fields/Disable_All_Copado_Events__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Copado_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable All Copado Events</label>
    <type>Checkbox</type>
</CustomField>