Dummy_Package_for_scratch_org/main/default/objects/Settings__c/fields/Enable_Standard_Function_Edit__c.field-meta.xml
<CustomField>
    <fullName>Enable_Standard_Function_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Turn on this checkbox if you want to modify standard functions</inlineHelpText>
    <label>Enable Standard Function Edit</label>
    <type>Checkbox</type>
</CustomField>