Dummy_Package_for_scratch_org/main/default/objects/Settings__c/fields/Enable_Standard_Job_Template_Edit__c.field-meta.xml
<CustomField>
    <fullName>Enable_Standard_Job_Template_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Standard Job Template  Edit</label>
    <type>Checkbox</type>
</CustomField>