Dummy_Package_for_scratch_org/main/default/objects/Settings__c/fields/Enabled_Multi_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Enabled_Multi_Licenses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled Multi-Licenses</label>
    <type>Checkbox</type>
</CustomField>