Dummy_Package_for_scratch_org/main/default/objects/Settings__c/fields/Functions_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Functions_Named_Credential__c</fullName>
    <label>Functions Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>