Dummy_Package_for_scratch_org/main/default/objects/Settings__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <defaultValue>&quot;copado__&quot;</defaultValue>
    <inlineHelpText>The namespace should contain two underscores &quot;__&quot; e.g. copado__</inlineHelpText>
    <label>Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>